# Crypto-Price-Tracker

./: .gitignore  CryptoPriceTracker.py  README.md  analytics.py  appconfig.py  appio.py  backtest.py  chart.py  costbasis.py  history.py  history_report.py  holdings.py  ledger.py  marketdata.py  news.py  news.sample.json  news_report.py  news_source.py  perf_report.py  pyproject.toml  rebalance.py  rebalance_report.py  report.py  requirements-dev.txt  requirements.txt  rewards.sample.csv  staking.py  staking.sample.json  staking_api.py  staking_report.py  targets.sample.json  tax.py  taxconfig.json  transactions.csv
.portfolio/: architecture.md  qa.md  stack.md
.portfolio/og-previews/: _generate.mjs  og-home.html
docs/superpowers/plans/: 2026-06-03-history.md  2026-06-03-news.md  2026-06-03-rebalancing.md  2026-06-03-staking.md  2026-06-03-tax-cost-basis.md
docs/superpowers/specs/: 2026-06-03-history-design.md  2026-06-03-news-design.md  2026-06-03-rebalancing-design.md  2026-06-03-staking-design.md  2026-06-03-tax-cost-basis-design.md
tests/: conftest.py  test_analytics.py  test_appconfig.py  test_appio.py  test_backtest.py  test_chart.py  test_cli.py  test_costbasis.py  test_crypto_price_tracker.py  test_formatters.py  test_history.py  test_history_report.py  test_holdings.py  test_integration.py  test_ledger.py  test_marketdata.py  test_news.py  test_news_report.py  test_news_source.py  test_rebalance.py  test_rebalance_report.py  test_report.py  test_staking.py  test_staking_api.py  test_staking_report.py  test_tax.py
